set max image size to 100% to prevent overflow

--- a/assets/style/_scss/elements/_elements.scss
+++ b/assets/style/_scss/elements/_elements.scss
@@ -41,6 +41,10 @@ a img {
   outline: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 [aria-hidden="true"] {
   display: none;
 }
